[BUGFIX] Correct overflow problem

--- a/Resources/Public/Css/theme.css
+++ b/Resources/Public/Css/theme.css
@@ -6679,6 +6679,10 @@ body,
 .htmlarea-content-body {
   position: relative;
 }
+.body-bg {
+  overflow: hidden;
+  zoom: 1;
+}
 .htmlarea-content-body {
   padding: 20px;
 }
