--- a/Resources/Public/Less/Theme/scaffolding.less
+++ b/Resources/Public/Less/Theme/scaffolding.less
@@ -4,6 +4,10 @@
 body {
 	position: relative;
 }
+.body-bg {
+	overflow: hidden;
+	zoom: 1;
+}
 
 
 //
